@@ -26,19 +26,19 @@ gchar **glatex_read_file_in_array(const gchar *filename)
 {
 	gchar **result = NULL;
 	gchar *data;
-
-	if (filename == NULL) return NULL;
-
-	g_file_get_contents(filename, &data, NULL, NULL);
-
+	GError *error = NULL;
+	
+	g_return_val_if_fail((filename != NULL), NULL);	
+	g_return_val_if_fail(g_file_get_contents(filename, &data, NULL, NULL), NULL);
+	
 	if (data != NULL)
 	{
+		g_warning("Content eingelesen: \n %s", data);
 		result = g_strsplit_set(data, "\r\n", -1);
+		g_free(data);
+		return result;
 	}
-
-	g_free(data);
-
-	return result;
+	return NULL;
 }
 
 void glatex_usepackage(const gchar *pkg, const gchar *options)
