@@ -1,3 +1,8 @@
+2010-10-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Try to fetch BibTeX entries from files inside working dir of file.
+
+
 2010-10-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Added a first version of a dialog supporting inserting a bibtex entry.
